primitives/api/test/tests/ui/empty_impl_runtime_apis_call.stderr
error: No api implementation given!
  --> $DIR/empty_impl_runtime_apis_call.rs:17:1
   |
17 | sp_api::impl_runtime_apis! {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `sp_api::impl_runtime_apis` (in Nightly builds, run with -Z macro-backtrace for more info)
